[gd_scene load_steps=4 format=3 uid="uid://c3u5h7tjecu0a"]

[ext_resource type="PackedScene" uid="uid://egpu0f2w06qp" path="res://src/gui/user_input/note_edition/edition_widgets/edition_widget.tscn" id="1_8usav"]
[ext_resource type="Script" path="res://src/gui/user_input/note_edition/edition_widgets/title_widget_edit.gd" id="2_4xe1m"]
[ext_resource type="Script" path="res://src/gui/user_input/rich_text_edit.gd" id="3_ulu4c"]

[node name="TitleWidgetEdit" instance=ExtResource("1_8usav")]
script = ExtResource("2_4xe1m")
attribute = ""

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 0
text = "EDIT_TITLE"

[node name="RichTextEdit" type="MarginContainer" parent="HBoxContainer" index="1"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
script = ExtResource("3_ulu4c")
