[gd_scene load_steps=2 format=3 uid="uid://elxiakmjubkb"]

[ext_resource type="Script" path="res://src/gui/user_input/rich_text_edit.gd" id="1_2m102"]

[node name="EditableRichTextLabel" type="MarginContainer"]
clip_contents = true
offset_right = 260.0
offset_bottom = 31.0
auto_translate = false
focus_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_2m102")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
auto_translate = false
bbcode_enabled = true
fit_content = true

[node name="CodeEdit" type="CodeEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/line_spacing = 0
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true
highlight_all_occurrences = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[connection signal="focus_entered" from="CodeEdit" to="." method="_on_code_edit_focus_entered"]
[connection signal="focus_exited" from="CodeEdit" to="." method="_on_code_edit_focus_exited"]
[connection signal="gui_input" from="CodeEdit" to="." method="_on_code_edit_gui_input"]
[connection signal="text_changed" from="CodeEdit" to="." method="_on_code_edit_text_changed"]
